@@ -1,4 +1,5 @@
 0.1-77
+- improve labels for oce.axis.POSIXct()
 - plot.profile(): add argument ytype; change 'type' to 'xtype'
 - add sw.z()
 - add oce.smooth()
